[gd_scene load_steps=6 format=3 uid="uid://dripg7f5v8xcn"]

[ext_resource type="Script" path="res://scenes/vfx/frozen_timer_fx/frozen_timer.gd" id="1_p8rf8"]

[sub_resource type="LabelSettings" id="LabelSettings_wjsp0"]
font_size = 12
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_e5e5n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FrozenTimerLabel:label_settings:font_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="Animation" id="Animation_tqo8r"]
resource_name = "tick"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FrozenTimerLabel:label_settings:font_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.5, 2),
"update": 1,
"values": [12, 8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wmavj"]
_data = {
"RESET": SubResource("Animation_e5e5n"),
"tick": SubResource("Animation_tqo8r")
}

[node name="FrozenTimer" type="Node2D"]
script = ExtResource("1_p8rf8")

[node name="FrozenTimerLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -14.0
offset_top = -14.0
offset_right = 14.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
text = "99
"
label_settings = SubResource("LabelSettings_wjsp0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wmavj")
}

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
